# comic

./: .gitignore
.github/scripts/: openai-review.js  package-lock.json  package.json  performance-review.js  security-review.js  unified-review.js
.github/workflows/: README.md  auto-promote.yml  backend-ci.yml  deploy.yml  docker-build.yml  frontend-ci.yml  openai-review.yml  unified-review.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: mod.rs  test.rs
backend/src/models/: test.rs
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/components/atoms/: IconButton.tsx
frontend/src/components/organisms/: BottomNavigation.tsx  Content.tsx  Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/contexts/: ThemeContext.tsx
infra/: .env.example  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
infra/docker/: backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile
scripts/: dev.sh  prod.sh
