[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-watch = "8.5"

# Compilation optimization profiles
[profile.dev]
opt-level = 0
debug = 1
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
# Speed up compilation in dev mode
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev mode

[profile.test]
opt-level = 0
debug = 2
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true
